bug with overflow in menu is fixed

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,6 @@
 .menu {
   background-color: $accent-color;
-
+  z-index: 1;
   &__content {
     height: 100vh;
     padding-top: $headerTopPadding;
